# apps/api/src/booking.ts
@@ -5,10 +5,13 @@ export enum BookingType {
 
 export interface Booking {
   id: string;
-  timeSlotId: string;
-  userId: string;
-  isHost: boolean;
-  paymentDetailsId: string;
+  customer_id: string;
+  time_slot_id: string;
+  service_id: string;
+  booking_status?: string;
+  is_host?: boolean;
+  party_size?: number;
+  invoice_id?: string;
   created_at?: Date;
   updated_at?: Date;
   type?: BookingType;
@@ -18,10 +21,9 @@ export const data: { bookings: Booking[] } = {
   bookings: [
     {
       id: '1',
-      timeSlotId: '1',
-      userId: '1',
-      isHost: true,
-      paymentDetailsId: '1',
+      customer_id: '1',
+      time_slot_id: '1',
+      service_id: '1',
       created_at: new Date(),
       updated_at: new Date(),
       type: BookingType.INPERSON,
